objects/WLD_Credit_Review__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Certification__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Id__c</fullName>
        <description>Used in Incomplete button</description>
        <formula>CASESAFEID( Certification__r.Id )</formula>
        <label>Certification Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <formula>CASE(Certification__r.RecordType.DeveloperName,
  &quot;Account_Certification&quot;, &quot;Account Certification&quot;,
  &quot;Account_Recertification&quot;, &quot;Account Recertification&quot;,
  &quot;Quarterly_Certification&quot;, &quot;Quarterly Certification&quot;,
  &quot;[No Certification Linked]&quot;
)</formula>
        <label>Certification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification</label>
        <referenceTo>WLD_Certification__c</referenceTo>
        <relationshipLabel>Credit Reviews</relationshipLabel>
        <relationshipName>Credit_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Covenant_Breach__c</fullName>
        <label>Covenant Breach</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Covenant_Waiver_Issues__c</fullName>
        <label>Covenant Waiver Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Document Approval</fullName>
                    <default>true</default>
                    <label>Pending Document Approval</label>
                </value>
                <value>
                    <fullName>Complete Package Received</fullName>
                </value>
                <value>
                    <fullName>Moody&apos;s Spreading</fullName>
                </value>
                <value>
                    <fullName>QLR Prep</fullName>
                </value>
                <value>
                    <fullName>Management Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Response_Review__c</fullName>
        <label>Customer Response Review</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marked_Incomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with Incomplete Certification button and workflow</description>
        <label>Marked Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obligor_Score__c</fullName>
        <label>Obligor Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Action__c</fullName>
        <label>Required Action</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerApprovedProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by the approval process upon approval and used in Credit Review trigger after update to set the associated Certification record Status to Completed</description>
        <label>TriggerApprovedProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerDeniedProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by the approval process upon rejection and used in Credit Review trigger after update to set the associated Certification record Status to Denied</description>
        <label>TriggerDeniedProcess</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Review</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>